# praxis

./: .gitignore  Makefile  README.md  features.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
backend/: llm.py  main.py  prompts.py
frontend/: app.js  index.html  lib.js  style.css
scripts/: share.sh
tests/: test_api.py  test_grading_harness.py  test_llm.py  test_prompts.py
tests-js/: boot.test.js  lib.test.js
