[project]
name = "praxis"
version = "0.1.0"
description = "LeetCode-style practice UI where an LLM generates the problem from your chosen topic (bring-your-own-API-key)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "openai>=1.40",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Cosmetic: Starlette's TestClient nags about an httpx2 migration.
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]
